# Stacktrace

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/tans/stacktrace/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_log.h  crash_monitor.cpp  crash_monitor.h  dump_stack.cpp  dump_stack.h  native-lib.cpp
app/src/main/cpp/hook/: hook.cpp  waithook.cpp  waithook.h
app/src/main/cpp/memalloctest/: mem_alloc_test_jni.cpp
app/src/main/cpp/stacktrack/: crash_monitor.cpp  crash_monitor.h  dump_stack.cpp  dump_stack.h  stackstrace_jni.cpp
app/src/main/java/com/tans/stacktrace/: MainActivity.kt  MyApplication.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tans/stacktrace/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
